feat! added sign up page

--- a/HotelManagementSystemClient/resources.qrc
+++ b/HotelManagementSystemClient/resources.qrc
@@ -16,5 +16,6 @@
     <qresource prefix="/qss">
         <file>assets/qss/main.qss</file>
         <file>assets/qss/signIn.qss</file>
+        <file>assets/qss/signUp.qss</file>
     </qresource>
 </RCC>
