--- a/HotelManagementSystemClient/pages/forms/mainpage.ui
+++ b/HotelManagementSystemClient/pages/forms/mainpage.ui
@@ -38,8 +38,11 @@
    <property name="bottomMargin">
     <number>10</number>
    </property>
-   <property name="spacing">
+   <property name="horizontalSpacing">
     <number>0</number>
+   </property>
+   <property name="verticalSpacing">
+    <number>15</number>
    </property>
    <item row="0" column="0">
     <widget class="QLabel" name="titleLabel">
@@ -67,9 +70,6 @@ System</string>
       <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QWidget" name="widget" native="true"/>
    </item>
   </layout>
  </widget>
